syntax = "proto3";
package staff;

import "task.proto";

option go_package = "github.com/beyondstorage/beyond-tp/models";

service Staff {
    rpc Register (RegisterRequest) returns (RegisterReply) {
    }
    rpc Elect (ElectRequest) returns (ElectReply) {
    }
    rpc Poll (PollRequest) returns (stream PollReply) {
    }
    rpc Finish (FinishRequest) returns (FinishReply) {
    }
}

message RegisterRequest {
    string staff_id = 1;
}

message RegisterReply {
}

message ElectRequest {
    string task_id = 1;
    string staff_id = 2;
    string staff_addr = 3;
}

message ElectReply {
    string leader_id = 1;
    string leader_addr = 2;
}

message PollRequest {
    string staff_id = 1;
}

enum PollStatus {
    InvalidPollStatus = 0;

    Valid = 1;
    Empty = 2;
    Terminated = 100;
}

message PollReply {
    PollStatus status = 1;
    task.Task task = 2;
}

message FinishRequest {
    string task_id = 1;
}

message FinishReply {
}
