syntax = "proto3";
package task;

option go_package = "github.com/beyondstorage/beyond-tp/models";

import "google/protobuf/timestamp.proto";

message Task {
  // Task related metadata
  string id = 1;
  string name = 2;
  TaskType type = 3;
  TaskStatus status = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;

  repeated Storage storages = 101;
}

enum TaskType {
  InvalidTaskType = 0;

  CopyDir = 1;
}

enum TaskStatus {
  InvalidTaskStatus = 0;

  Created = 1;
  Ready = 2;
  Running = 3;
  Finished = 4;
  Stopped = 5;
  Error = 6;
}

message TaskReply {
  string id = 1;
  uint32 status = 3;
  string message = 4;
}

message Storage {
  StorageType type = 1;
  string connection = 2;
}

enum StorageType {
  InvalidStorageType = 0;

  Azblob = 1;
  Cos = 2;
  Dropbox = 3;
  Fs = 4;
  Gcs = 5;
  Kodo = 6;
  Oss = 7;
  Qingstor = 8;
  S3 = 9;
}
